implement user notification settings + refactor the whole thing
