# src/main/java/it/sijmen/movienotifier/api/UserApiController.java
@@ -3,26 +3,26 @@ package it.sijmen.movienotifier.api;
 import io.swagger.model.*;
 import io.swagger.model.User;
 import io.swagger.model.UserUpdateDetails;
-import it.sijmen.movienotifier.controllers.UserController;
+import it.sijmen.movienotifier.service.UserService;
 import it.sijmen.movienotifier.model.*;
 import it.sijmen.movienotifier.model.exceptions.BadRequestException;
-import org.springframework.beans.factory.annotation.Autowired;
+import it.sijmen.movienotifier.service.notification.Notifier;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
+import javax.inject.Inject;
 import java.util.List;
 
 @Controller
 @RequestMapping("/user")
-public class UserApi {
+public class UserApiController {
 
-    private final UserController userController;
+    private final UserService userService;
 
-    @Autowired
-    public UserApi(UserController userController) {
-        this.userController = userController;
+    @Inject
+    public UserApiController(UserService userService) {
+        this.userService = userService;
     }
 
     @RequestMapping(method = RequestMethod.PUT)
@@ -33,7 +33,7 @@ public class UserApi {
         if (details == null)
             throw new BadRequestException("No details provided");
 
-        return userController.createUser(
+        return userService.createUser(
                         new it.sijmen.movienotifier.model.User(
                                 details.getName(), details.getEmail(), details.getPhonenumber(),
                                 details.getPassword())
@@ -48,7 +48,7 @@ public class UserApi {
         if (details == null)
             throw new BadRequestException("No details provided");
 
-        return userController.login(
+        return userService.login(
                         new LoginDetails(
                                 details.getName(),
                                 details.getPassword()
@@ -61,11 +61,8 @@ public class UserApi {
     public void delete(
             @PathVariable("userid") String userid,
             @RequestHeader("APIKEY") String apikey) {
-        if(userid == null)
-            throw new BadRequestException("userid not provided");
-        if(apikey == null)
-            throw new BadRequestException("apikey is not provided");
-        userController.delete(userid, apikey);
+        checkUseridApikeyAvailable(userid, apikey);
+        userService.delete(userid, apikey);
     }
 
     @RequestMapping(value = "/{userid}", method = RequestMethod.GET)
@@ -74,11 +71,9 @@ public class UserApi {
     public User get(
             @PathVariable("userid") String userid,
             @RequestHeader("APIKEY") String apikey) {
-        if(userid == null)
-            throw new BadRequestException("userid not provided");
-        if(apikey == null)
-            throw new BadRequestException("apikey is not provided");
-        return userController.get(userid, apikey).toSwaggerUser();
+        checkUseridApikeyAvailable(userid, apikey);
+
+        return userService.get(userid, apikey).toSwaggerUser();
     }
 
     @RequestMapping(value = "/{userid}", method = RequestMethod.POST)
@@ -88,37 +83,28 @@ public class UserApi {
             @PathVariable("userid") String userid,
             @RequestBody UserUpdateDetails userUpdateDetails,
             @RequestHeader("APIKEY") String apikey) {
-        if(userid == null)
-            throw new BadRequestException("userid not provided");
-        if(apikey == null)
-            throw new BadRequestException("apikey is not provided");
+        checkUseridApikeyAvailable(userid, apikey);
+
         if(userUpdateDetails == null)
             throw new BadRequestException("user details not provided");
-        return userController.update(
+        return userService.update(
                 userid,
                 apikey,
                 new it.sijmen.movienotifier.model.UserUpdateDetails(
                         userUpdateDetails.getName(),
                         userUpdateDetails.getEmail(),
                         userUpdateDetails.getPhonenumber(),
-                        userUpdateDetails.getPassword()
+                        userUpdateDetails.getPassword(),
+                        userUpdateDetails.getNotifications()
                 )
         ).toSwaggerUser();
     }
 
-    @RequestMapping(value = "/{userid}/notifications/", method = RequestMethod.GET)
-    public ResponseEntity<List<NotificationSetting>> getNotifications(
-            @PathVariable("userid") String userid,
-            @RequestHeader("APIKEY") String apikey) {
-        return null;
-    }
-
-    @RequestMapping(value = "/{userid}/notifications/", method = RequestMethod.POST)
-    public ResponseEntity<List<NotificationSetting>> updateNotifications(
-            @PathVariable("userid") String userid,
-            @RequestBody List<NotificationSetting> notificationsettings,
-            @RequestHeader("APIKEY") String apikey) {
-        return null;
+    private void checkUseridApikeyAvailable(String userid, String apikey){
+        if(userid == null)
+            throw new BadRequestException("userid not provided");
+        if(apikey == null)
+            throw new BadRequestException("apikey is not provided");
     }
 
 }
