# src/main/java/it/sijmen/movienotifier/model/UserUpdateDetails.java
@@ -1,9 +1,11 @@
 package it.sijmen.movienotifier.model;
 
+import it.sijmen.movienotifier.service.notification.validation.ValidNotification;
 import org.hibernate.validator.constraints.Email;
 
 import javax.validation.constraints.Pattern;
 import javax.validation.constraints.Size;
+import java.util.List;
 
 public class UserUpdateDetails extends Model{
 
@@ -21,11 +23,15 @@ public class UserUpdateDetails extends Model{
     @Pattern(regexp = "^([a-zA-z0-9!@#$%^&*()_\\-+={}\\[\\]:;?><.,]+)$", message = "may only contain the letters (a-z), capital letters (A-Z), numbers (0-9) and the following special characters between (and thus except) the quotation marks \"!@#$%^&*()_-+={}[]:;?><.,\"")
     private String password = null;
 
-    public UserUpdateDetails(String name, String email, String phonenumber, String password) {
+    @ValidNotification
+    private List<String> enabledNotifications;
+
+    public UserUpdateDetails(String name, String email, String phonenumber, String password, List<String> enabledNotifications) {
         this.name = name;
         this.email = email;
         this.phonenumber = phonenumber;
         this.password = password;
+        this.enabledNotifications = enabledNotifications;
     }
 
     public String getName() {
@@ -58,5 +64,13 @@ public class UserUpdateDetails extends Model{
 
     public void setPassword(String password) {
         this.password = password;
+    }
+
+    public List<String> getEnabledNotifications() {
+        return enabledNotifications;
+    }
+
+    public void setEnabledNotifications(List<String> enabledNotifications) {
+        this.enabledNotifications = enabledNotifications;
     }
 }
