# src/main/java/it/sijmen/movienotifier/service/notification/validation/NotificationTypeKeyArrayValidator.java
@@ -1,0 +1,25 @@
+package it.sijmen.movienotifier.service.notification.validation;
+
+import javax.validation.ConstraintValidator;
+import javax.validation.ConstraintValidatorContext;
+
+public class NotificationTypeKeyArrayValidator implements ConstraintValidator<ValidNotification, String[]> {
+
+    @Override
+    public void initialize(ValidNotification constraintAnnotation) {
+
+    }
+
+    @Override
+    public boolean isValid(String[] values, ConstraintValidatorContext context) {
+        if(values == null)
+            return true;
+        for(String value : values){
+            if(value == null)
+                continue;
+            if(!NotificationTypeKeyValidator.isValidKey(value))
+                return false;
+        }
+        return true;
+    }
+}
