# src/main/java/it/sijmen/movienotifier/service/notification/validation/NotificationTypeKeyValidator.java
@@ -1,0 +1,25 @@
+package it.sijmen.movienotifier.service.notification.validation;
+
+import it.sijmen.movienotifier.service.notification.NotificationModule;
+import org.jetbrains.annotations.NotNull;
+
+import javax.validation.ConstraintValidator;
+import javax.validation.ConstraintValidatorContext;
+
+public class NotificationTypeKeyValidator implements ConstraintValidator<ValidNotification, String> {
+
+    public static boolean isValidKey(@NotNull String key){
+        for(String valid : NotificationModule.allNotificationTypes())
+            if(valid.equals(key))
+                return true;
+        return false;
+    }
+
+    @Override
+    public void initialize(ValidNotification constraintAnnotation) {}
+
+    @Override
+    public boolean isValid(String value, ConstraintValidatorContext context) {
+        return value == null || isValidKey(value);
+    }
+}
